@@ -589,4 +589,12 @@
   numbers, this conf var needs to be set manually.</description>
 </property>
 
+<!-- HBase Storage Handler Parameters -->
+
+<property>
+  <name>hive.hbase.wal.enabled</name>
+  <value>true</value>
+  <description>Whether writes to HBase should be forced to the write-ahead log.  Disabling this improves HBase write performance at the risk of lost writes in case of a crash.</description>
+</property>
+
 </configuration>
