@@ -61,6 +61,68 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|HBaseConfiguration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+operator|.
+name|HTable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+operator|.
+name|Put
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|io
+operator|.
+name|BatchOperation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|io
 operator|.
 name|BatchUpdate
@@ -96,6 +158,22 @@ operator|.
 name|mapred
 operator|.
 name|TableOutputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|conf
+operator|.
+name|HiveConf
 import|;
 end_import
 
@@ -262,41 +340,93 @@ argument_list|,
 name|hbaseTableName
 argument_list|)
 expr_stmt|;
-specifier|final
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|mapred
-operator|.
-name|RecordWriter
-argument_list|<
-name|ImmutableBytesWritable
-argument_list|,
-name|BatchUpdate
-argument_list|>
-name|tblWriter
+name|boolean
+name|walEnabled
 init|=
-name|this
+name|HiveConf
 operator|.
-name|getRecordWriter
+name|getBoolVar
 argument_list|(
-literal|null
-argument_list|,
 name|jc
 argument_list|,
-literal|null
-argument_list|,
-name|progress
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVE_HBASE_WAL_ENABLED
 argument_list|)
 decl_stmt|;
+name|HTable
+name|table
+init|=
+operator|new
+name|HTable
+argument_list|(
+operator|new
+name|HBaseConfiguration
+argument_list|(
+name|jc
+argument_list|)
+argument_list|,
+name|hbaseTableName
+argument_list|)
+decl_stmt|;
+name|table
+operator|.
+name|setAutoFlush
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
 return|return
 operator|new
+name|HiveHBaseRecordWriter
+argument_list|(
+name|table
+argument_list|,
+name|walEnabled
+argument_list|)
+return|;
+block|}
+comment|// This class was cloned from the HBase RecordWriter so that we
+comment|// can control the WAL setting.
+specifier|private
+specifier|static
+class|class
+name|HiveHBaseRecordWriter
+implements|implements
 name|RecordWriter
-argument_list|()
 block|{
+specifier|private
+name|HTable
+name|table
+decl_stmt|;
+specifier|private
+name|boolean
+name|walEnabled
+decl_stmt|;
+name|HiveHBaseRecordWriter
+parameter_list|(
+name|HTable
+name|table
+parameter_list|,
+name|boolean
+name|walEnabled
+parameter_list|)
+block|{
+name|this
+operator|.
+name|table
+operator|=
+name|table
+expr_stmt|;
+name|this
+operator|.
+name|walEnabled
+operator|=
+name|walEnabled
+expr_stmt|;
+block|}
 annotation|@
 name|Override
 specifier|public
@@ -309,13 +439,18 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|tblWriter
+if|if
+condition|(
+operator|!
+name|abort
+condition|)
+block|{
+name|table
 operator|.
-name|close
-argument_list|(
-literal|null
-argument_list|)
+name|flushCommits
+argument_list|()
 expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -330,35 +465,86 @@ throws|throws
 name|IOException
 block|{
 name|BatchUpdate
-name|bu
+name|batchUpdate
 init|=
 operator|(
 name|BatchUpdate
 operator|)
 name|w
 decl_stmt|;
-name|key
+for|for
+control|(
+name|BatchOperation
+name|bo
+range|:
+name|batchUpdate
+control|)
+block|{
+assert|assert
+operator|(
+name|bo
 operator|.
-name|set
+name|isPut
+argument_list|()
+operator|)
+assert|;
+name|Put
+name|p
+init|=
+operator|new
+name|Put
 argument_list|(
-name|bu
+name|batchUpdate
 operator|.
 name|getRow
 argument_list|()
-argument_list|)
-expr_stmt|;
-name|tblWriter
-operator|.
-name|write
-argument_list|(
-name|key
 argument_list|,
-name|bu
+literal|null
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|walEnabled
+condition|)
+block|{
+name|p
+operator|.
+name|setWriteToWAL
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+name|p
+operator|.
+name|add
+argument_list|(
+name|bo
+operator|.
+name|getColumn
+argument_list|()
+argument_list|,
+name|batchUpdate
+operator|.
+name|getTimestamp
+argument_list|()
+argument_list|,
+name|bo
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|table
+operator|.
+name|put
+argument_list|(
+name|p
 argument_list|)
 expr_stmt|;
 block|}
 block|}
-return|;
 block|}
 block|}
 end_class
